--- a/index.ipynb
+++ b/index.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "[38501 rows x 53 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -586,17 +586,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X = df.drop('Cover_Type', axis=1)\n",
-    "y = df['Cover_Type']\n",
-    "#Perform train-test split with random_state=42 and stratify=y\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, stratify=y, random_state=42)"
+    "# Split df into X and y\n",
+    "X = df.drop(\"Cover_Type\", axis=1)\n",
+    "y = df[\"Cover_Type\"]\n",
+    "\n",
+    "# Perform train-test split with random_state=42 and stratify=y\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42, stratify=y)\n",
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
@@ -608,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +681,7 @@
        "0.1255288892455634"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +728,7 @@
        "'\\nOur log loss is better with the vanilla (un-tuned) kNN model\\nthan it was with the tuned logistic regression model\\n\\nIt was slower, taking around a minute to complete\\nthe cross-validation on this machine\\n'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +764,7 @@
        "0.078613760394212"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +802,7 @@
        "0.07621145166565102"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +833,7 @@
        "0.08591231255583043"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +865,7 @@
        "'\\nknn_third_model is our best one.\\n'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +899,7 @@
        "0.7045390124149022"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,9 +923,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nThis is much worse than either the logistic regression or the\\nkNN models. We can probably assume that the model is badly\\noverfitting, since we have not \"pruned\" it at all.\\n'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace None with appropriate text\n",
     "\"\"\"\n",
@@ -943,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +966,7 @@
        "0.28719567271672036"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +1003,7 @@
        "0.11894015917756935"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1033,7 @@
        "0.20808868577091694"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1078,7 @@
        "KNeighborsClassifier(metric='manhattan', n_neighbors=50)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1146,7 @@
        "'\\nThis model has 97% accuracy, meaning that it assigns the\\ncorrect label 97% of the time. This is definitely an \\nimprovement over a \"dummy\" model, which would have about\\n92% accuracy.\\n\\nIf our model labels a given forest area a 1, there is\\nabout an 89% chance that it really is class 1, compared\\nto about a 67% chance with the logistic regression\\n\\nThe recall score is also improved from the logistic\\nregression model. If a given cell of forest really is\\nclass 1, there is about a 69% chance that our model\\nwill label it correctly. This is better than the 48%\\nof the logistic regression model, but still doesn\\'t\\ninstill a lot of confidence. If the business really \\ncared about avoiding \"false negatives\" (labeling\\ncottonwood/willow as ponderosa pine) more so than\\navoiding \"false positives\" (labeling ponderosa pine\\nas cottonwood/willow), then we might want to adjust\\nthe decision threshold on this\\n'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
